Fixing table map overlap

--- a/css/tables.css
+++ b/css/tables.css
@@ -87,7 +87,7 @@
     position: right;
     position: absolute;
     top: 250px;
-    right: 100px;
+    right: 10px;
     table-layout: fixed;
 }
   
